2.2.5/_sources/gallery/pyplots/whats_new_98_4_fill_between.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_pyplots_whats_new_98_4_fill_between.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_whats_new_98_4_fill_between.py:


=============================
Whats New 0.98.4 Fill Between
=============================



.. image:: /gallery/pyplots/images/sphx_glr_whats_new_98_4_fill_between_001.png
    :class: sphx-glr-single-img






.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np

    x = np.arange(0.0, 2, 0.01)
    y1 = np.sin(2*np.pi*x)
    y2 = 1.2*np.sin(4*np.pi*x)

    fig, ax = plt.subplots()
    ax.plot(x, y1, x, y2, color='black')
    ax.fill_between(x, y1, y2, where=y2>y1, facecolor='green')
    ax.fill_between(x, y1, y2, where=y2<=y1, facecolor='red')
    ax.set_title('fill between where')

    plt.show()


.. _sphx_glr_download_gallery_pyplots_whats_new_98_4_fill_between.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: whats_new_98_4_fill_between.py <whats_new_98_4_fill_between.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: whats_new_98_4_fill_between.ipynb <whats_new_98_4_fill_between.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
